<resources>
    <string name="app_name">SuperCalendar</string>

    <string name="title_activity_add_edit_todo">Add/Edit Todo</string>
    <string name="title_activity_add_edit_image">Add/Edit Image</string>
    <string name="title_activity_choose_add_type">Add item</string>

    <string name="parse_app_id">p6hd1KznrdoeApttOKGaPmYKn4GIB4KiQWyivdUl</string>
    <string name="parse_client_key">LrmimA0sWej7o7mLBWueqQKvICefQnWHA83REYEE</string>

    <string name="cancel">Cancel</string>

    <string name="action_show_month">Show month</string>
    <string name="action_reload">Reload Todos</string>
    <string name="action_choose_date">Choose Date</string>
    <string name="action_logout">Logout</string>

    <string name="dialog_delete_title">Delete item</string>
    <string name="dialog_delete_positive_button">Delete!</string>
    <string name="dialog_delete_negative_button">Cancel</string>
    <string name="dialog_delete_todo">Do you want to delete this ToDo item?</string>
    <string name="dialog_delete_image">Do you want to delete this image item?</string>

    <string name="add_todo_name">Name</string>
    <string name="add_todo_completed">Completed</string>
    <string name="add_todo_duedate">Due Date</string>
    <string name="add_todo_name_missing">Please assign a name for the item</string>

    <string name="add_image_select_image">Select Image</string>
    <string name="add_image_date">Date</string>
    <string name="add_image_image_missing">No image selected</string>
    <string name="add_image_description_missing">Please fill out the description</string>
    <string name="add_image_choose">Add photo</string>
    <string name="add_image_camera">Take a picture</string>
    <string name="add_image_library">Choose from library</string>

    <string name="progress_title_loading">Loading</string>
    <string name="progress_message_loading">Please wait while loading...</string>

    <string name="progress_title_save">Saving item</string>
    <string name="progress_message_save">Please wait while saving item...</string>

    <string name="progress_title_delete">Deleting item</string>
    <string name="progress_message_delete">Please wait while deleting item...</string>

    <string name="add_decription">Description</string>
    <string name="add_date_hint">Click to enter date</string>
    <string name="add_save">Save</string>

    <string name="toast_todo_added">ToDo added</string>
    <string name="toast_todo_updated">ToDo updated</string>

    <string name="toast_image_added">Image added</string>
    <string name="toast_image_updated">Image updated</string>

    <string name="toast_save_failed">Failed to save item.</string>

    <string name="choose_add_todo">Add ToDo</string>
    <string name="choose_add_image">Add Image</string>

</resources>
