<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dayoverview.DayActivity">

    <item
        android:id="@+id/action_showmonth"
        android:icon="@drawable/ic_action_list"
        android:title="@string/action_show_month"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_choosedate"
        android:icon="@drawable/ic_date_range"
        android:title="@string/action_choose_date"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_reload"
        android:title="@string/action_reload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_exit"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom" />
</menu>
