<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.haw.yumiii.supercalendar.ChooseAddTypeFragment"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/choose_add_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_add_todo" />

        <Button
            android:id="@+id/choose_add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_add_image" />

        <Button
            android:id="@+id/choose_add_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</FrameLayout>
