<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".dayoverview.ChooseAddTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/choose_add_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_add_todo" />

        <Button
            android:id="@+id/choose_add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_add_image" />

        <Button
            android:id="@+id/choose_add_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>
